# CC0

./: .gitignore  CNAME  Cargo.toml  Makefile  index.html  readme.md
.github/workflows/: pages.yml
examples/: exp.rs  pure_mcts.rs  super_mcts.rs
model/: api.py  environment.py  eval.py  eval2.py  exp.py  export.py  model.py  poc.py  train.py  train.sh  train2.py  utils.py  xgb.py
scripts/: gen_board.jl  poc.py
src/: alphabeta.rs  board.rs  game.rs  greedy.rs  lib.rs  main.rs  mcts.rs
web/: api.coffee  board.coffee  canvas.coffee  index.coffee  index.html  index.less  index.ymd  model.coffee  peer.coffee  pvp.coffee
