[package]
name = "cc0"
version = "0.1.0"
authors = ["Shiwei Zhang <ylxdzsw@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ordered-float = { version = "2.8", default-features = false }
libm = "0.2"
dlmalloc = { version = "0.2", features = ["global"] }
